# wall_climbing-robot

./: README.md
motor/: CMakeLists.txt  package.xml
motor/include/: can_bus.h  can_kvaser.h
motor/src/: can_bus.cpp  can_kvaser.cpp  motor_control.cpp
sizu_gazebo/: CMakeLists.txt  package.xml
sizu_gazebo/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  joint_names_sizu.yaml  local_costmap_params.yaml  sizu.rviz  sizu_control.yaml
sizu_gazebo/launch/: display.launch  gazebo.launch  map_save.launch  move_base.launch  slam.launch
sizu_gazebo/map/: nav.pgm  nav.yaml
sizu_gazebo/meshes/: base_link.STL  coxa_FL.STL  coxa_FR.STL  coxa_RL.STL  coxa_RR.STL  femur_FL.STL  femur_FR.STL  femur_RL.STL  femur_RR.STL  foot_FL.STL  foot_FR.STL  foot_RL.STL  foot_RR.STL  leg_center_FL.STL  leg_center_FR.STL  leg_center_RL.STL  leg_center_RR.STL  tibia_FL.STL  tibia_FR.STL  tibia_RL.STL  tibia_RR.STL
sizu_gazebo/urdf/: adhesion.xacro  robot.xacro  sensor.xacro  sizu.csv  sizu.urdf.xacro  sizu_transmission.xacro
sizu_gazebo/worlds/: move_base.world
sizu_movement/: CMakeLists.txt  package.xml
sizu_movement/include/: EstimateParameters.h  main.h  move.h  robot_control.h
sizu_movement/src/: EstimateParameters.cpp  gpio_control.cpp  keyboard_control.cpp  main.cpp  move.cpp  robot_control.cpp
